--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas_timepass</title>
     <link rel="icon" href="logo.png">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="frontend/css/index.css">
 </head>
 <body>
     <div class="container">
