--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <div class="container">
+        <!-- navbar -->
         <nav>
             <span>
-                <img src="logo.png" width="50" alt="">
+                <span>
+                    <img src="logo.jpg" width="50" height="50" alt="">
+                    <img src="logo.jpg" width="40" height="40" alt="">
+                </span>
             </span>
             <span>
                 <a href="">Home</a>
@@ -20,6 +24,29 @@
                 <a href="">Contact</a>
             </span>
         </nav>
+        <!-- navbar end -->
+
+        <!-- Home page section -->
+        <section class="home">
+            
+            <!-- animation text -->
+            <div class="wrapper_anim">
+                <h1 class="reveal-text">
+                    Greetings!!
+                </h1>
+                <h1 class="reveal-text1">
+                    Rohit Kumar's
+                </h1>
+                <h1 class="reveal-text2">
+                    Portfolio
+                </h1>
+                <button>
+                    Explore More...
+                </button>
+            </div>
+            <div class="content_home"></div>
+        </section>
     </div>
 </body>
+<script src="frontend/js/index.js"></script>
 </html>
