background with intro page

--- a/index.html
+++ b/index.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="body1">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas_timepass</title>
     <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="frontend/css/index.css">
+    <link rel="stylesheet" href="frontend/css/responsive.css">
 </head>
-<body>
-    <div class="container">
-        <!-- navbar -->
-        <nav>
-            <span>
-                <span>
-                    <img src="logo.jpg" width="50" height="50" alt="">
-                    <img src="logo.jpg" width="40" height="40" alt="">
-                </span>
-            </span>
-            <span>
-                <a href="">Home</a>
-                <a href="">Achievement</a>
-                <a href="">Gallery</a>
-                <a href="">Contact</a>
-            </span>
-        </nav>
-        <!-- navbar end -->
 
-        <!-- Home page section -->
-        <section class="home">
-            
-            <!-- animation text -->
-            <div class="wrapper_anim">
-                <h1 class="reveal-text">
-                    Greetings!!
-                </h1>
-                <h1 class="reveal-text1">
-                    Rohit Kumar's
-                </h1>
-                <h1 class="reveal-text2">
-                    Portfolio
-                </h1>
-                <button>
-                    Explore More...
-                </button>
-            </div>
-            <div class="content_home"></div>
-        </section>
-    </div>
+<body class="body1">
+    <div class="background_anim"></div>
+    <div class="background_anim"></div>
+    <div class="background_anim"></div>
+    <div class="background_anim"></div>
+    <!-- navbar -->
+    <nav>
+        <span>
+            <span>
+                <img src="logo.jpg" width="50" height="50" alt="">
+                <img src="logo.jpg" width="40" height="40" alt="">
+            </span>
+        </span>
+        <span>
+            <a href="">Home</a>
+            <a href="">Achievement</a>
+            <a href="">Gallery</a>
+            <a href="">Contact</a>
+        </span>
+    </nav>
+    <!-- navbar end -->
+
+    <!-- Home page section -->
+    <section class="home">
+
+        <!-- animation text -->
+        <div class="wrapper_anim">
+            <h1 class="reveal-text">
+                Greetings!!
+            </h1>
+            <h1 class="reveal-text1">
+                Rohit Kumar's
+            </h1>
+            <h1 class="reveal-text2">
+                Portfolio
+            </h1>
+            <button onclick="window.location.href='frontend/html/intro.html'">
+                Explore More...
+            </button>
+        </div>
+        <div class="content_home">
+            <img src="frontend/material_images/homepage.png" alt="">
+        </div>
+    </section>
 </body>
 <script src="frontend/js/index.js"></script>
+
 </html>
