--- a/index.html
+++ b/index.html
@@ -1,40 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" class="body1">
+<html lang="en" class="body_index">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas_timepass</title>
     <link rel="icon" href="logo.png">
-    <link rel="stylesheet" href="frontend/css/index.css">
+    <link rel="stylesheet" href="frontend/css/background.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="frontend/css/responsive.css">
 </head>
 
-<body class="body1">
+<body class="body_index">
     <div class="background_anim"></div>
     <div class="background_anim"></div>
     <div class="background_anim"></div>
     <div class="background_anim"></div>
-    <!-- navbar -->
-    <nav>
-        <span>
-            <span>
-                <img src="logo.jpg" width="50" height="50" alt="">
-                <img src="logo.jpg" width="40" height="40" alt="">
-            </span>
-        </span>
-        <span>
-            <a href="">Home</a>
-            <a href="">Achievement</a>
-            <a href="">Gallery</a>
-            <a href="">Contact</a>
-        </span>
-    </nav>
-    <!-- navbar end -->
 
     <!-- Home page section -->
     <section class="home">
-
         <!-- animation text -->
         <div class="wrapper_anim">
             <h1 class="reveal-text">
@@ -51,7 +35,24 @@
             </button>
         </div>
         <div class="content_home">
-            <img src="frontend/material_images/homepage.png" alt="">
+            <h1 class="achiev_text">
+                <span><button><span>Guinness</span></button></span>
+                <span><button><span>Book</span></button></span>
+                <span><button>Of</button></span>
+                <span><button>World</button></span>
+                <span><button>Record</button></span><br>
+                <span><button>Winner</button></span>
+                <span><button>in</button></span>
+                <span><button><span>IIT</span></button></span>
+                <span><button><span>Delhi</span></button></span>
+                <span><button>Competition</button></span><br>
+                <span><button><span>4</span></button></span>
+                <span><button>International</button></span>
+                <span><button>Awards</button></span><br>
+                <span><button><span>7</span></button></span>
+                <span><button>National</button></span>
+                <span><button>Awards</button></span>
+              </h1>
         </div>
     </section>
 </body>
