added all links to navbar and give life to it...added contact page

--- a/frontend/html/gallery.html
+++ b/frontend/html/gallery.html
@@ -37,22 +37,22 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="intro.html">Home</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" href="#">Achievement</a>
+                            <a class="nav-link" href="achievment.html">Achievement</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" aria-disabled="true">Gallery</a>
+                            <a class="nav-link" href="gallery.html" aria-disabled="true">Gallery</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" aria-disabled="true">Contact</a>
+                            <a class="nav-link" href="contact.html" aria-disabled="true">Contact</a>
                         </span>
                     </li>
                 </ul>
