--- a/frontend/html/achievment.html
+++ b/frontend/html/achievment.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Canvas_timepass</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/navbar.css">
@@ -32,22 +34,22 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="intro.html">Home</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" href="#">Achievement</a>
+                            <a class="nav-link" href="achievment.html">Achievement</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" aria-disabled="true">Gallery</a>
+                            <a class="nav-link" href="gallery.html" aria-disabled="true">Gallery</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" aria-disabled="true">Contact</a>
+                            <a class="nav-link" href="contact.html" aria-disabled="true">Contact</a>
                         </span>
                     </li>
                 </ul>
