--- a/frontend/html/achievment.html
+++ b/frontend/html/achievment.html
@@ -22,8 +22,8 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <span>
-                <img src="../../logo.jpg" width="50" height="50" alt="">
-                <img src="../../logo.jpg" width="40" height="40" alt="">
+                <img onclick="window.location.href='../../index.html'" src="../../logo.jpg" width="50" height="50" alt="">
+                <img onclick="window.location.href='../../index.html'" src="../../logo.jpg" width="40" height="40" alt="">
             </span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
