--- a/frontend/html/gallery.html
+++ b/frontend/html/gallery.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
 </head>
 
-<body class="body3">
+<body class="body_gallery">
     <div class="background_anim"></div>
     <div class="background_anim"></div>
     <div class="background_anim"></div>
@@ -25,8 +25,8 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <span>
-                <img src="../../logo.jpg" width="50" height="50" alt="">
-                <img src="../../logo.jpg" width="40" height="40" alt="">
+                <img onclick="window.location.href='../../index.html'" src="../../logo.jpg" width="50" height="50" alt="">
+                <img onclick="window.location.href='../../index.html'" src="../../logo.jpg" width="40" height="40" alt="">
             </span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -70,6 +70,8 @@
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -87,7 +89,14 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../../logo.jpg" class="d-block w-100" alt="...">
+                    <img src="../gallery/crousal3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-md-block">
+                        <h5>Some representative placeholder content</h5>
+                        <p>This slide can be customized with additional information.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="../gallery/crousal4.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
                         <h5>Some representative placeholder content</h5>
                         <p>This slide can be customized with additional information.</p>
@@ -257,6 +266,60 @@
         </div>
 
         <!-- Card 13 -->
+        <div class="col container_gallery">
+            <div class="card h-100 card_gallery">
+                <img src="../gallery/card16.jpg" class="card-img-top" alt="Card 12">
+                <div class="card-body card__content_gallery">
+                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                </div>
+            </div>
+        </div>
+
+        <!-- card 14 -->
+        <div class="col container_gallery">
+            <div class="card h-100 card_gallery">
+                <img src="../gallery/card17.jpg" class="card-img-top" alt="Card 12">
+                <div class="card-body card__content_gallery">
+                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                </div>
+            </div>
+        </div>
+
+        <!-- self images -->
+        <!-- card 1 -->
+        <div class="col container_gallery">
+            <div class="card h-100 card_gallery">
+                <img src="../gallery/self_card1.jpg" class="card-img-top" alt="Card 12">
+                <div class="card-body card__content_gallery">
+                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col container_gallery">
+            <div class="card h-100 card_gallery">
+                <img src="../gallery/self_card2.jpg" class="card-img-top" alt="Card 12">
+                <div class="card-body card__content_gallery">
+                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col container_gallery">
+            <div class="card h-100 card_gallery">
+                <img src="../gallery/self_card3.jpg" class="card-img-top" alt="Card 12">
+                <div class="card-body card__content_gallery">
+                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                </div>
+            </div>
+        </div>
+        <div class="col container_gallery">
+            <div class="card h-100 card_gallery">
+                <img src="../gallery/self_card4.jpg" class="card-img-top" alt="Card 12">
+                <div class="card-body card__content_gallery">
+                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
     <!-- footer -->
