update the gallery page.....

--- a/frontend/html/gallery.html
+++ b/frontend/html/gallery.html
@@ -77,29 +77,29 @@
                 <div class="carousel-item active">
                     <img src="../gallery/crousal1.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <h5>FELICITATION AT USTAD ALLAUDDIN KHAN INTERNATIONAL MUSIC CONCERT</h5>
-                        <p>Recognition and honor received at a prestigious music concert.</p>
+                        <span>FELICITATION AT USTAD ALLAUDDIN KHAN INTERNATIONAL MUSIC CONCERT</span><br>
+                        <span>Recognition and honor received at a prestigious music concert.</span>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../gallery/crousal2.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <h5>PERFORMANCE IN FRONT OF HONOURABLE AMIT SHAH JI</h5>
-                        <p>Live performance in the presence of the Home Minister of India.</p>
+                        <span>PERFORMANCE IN FRONT OF HONOURABLE AMIT SHAH JI</span><br>
+                        <span>Live performance in the presence of the Home Minister of India.</span>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../gallery/crousal3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <h5>Some representative placeholder content</h5>
-                        <p>This slide can be customized with additional information.</p>
+                        <span>Some representative placeholder content</span><br>
+                        <span>This slide can be customized with additional information.</span>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../gallery/crousal4.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <h5>Some representative placeholder content</h5>
-                        <p>This slide can be customized with additional information.</p>
+                        <span>Some representative placeholder content</span><br>
+                        <span>This slide can be customized with additional information.</span>
                     </div>
                 </div>
             </div>
