--- a/frontend/html/contact.html
+++ b/frontend/html/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
 </head>
 
-<body class="body2">
+<body class="body_contact">
     <div class="background_anim"></div>
     <div class="background_anim"></div>
     <div class="background_anim"></div>
@@ -23,8 +23,10 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <span>
-                <img onclick="window.location.href='../../index.html'" src="../../logo.jpg" width="50" height="50" alt="">
-                <img onclick="window.location.href='../../index.html'" src="../../logo.jpg" width="40" height="40" alt="">
+                <img style="cursor: pointer;" onclick="window.location.href='../../index.html'" src="../../logo.jpg"
+                    width="50" height="50" alt="">
+                <img style="cursor: pointer;" onclick="window.location.href='../../index.html'" src="../../logo.jpg"
+                    width="40" height="40" alt="">
             </span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
