--- a/frontend/html/gallery.html
+++ b/frontend/html/gallery.html
@@ -25,8 +25,10 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <span>
-                <img onclick="window.location.href='../../index.html'" src="../../logo.jpg" width="50" height="50" alt="">
-                <img onclick="window.location.href='../../index.html'" src="../../logo.jpg" width="40" height="40" alt="">
+                <img style="cursor: pointer;" onclick="window.location.href='../../index.html'" src="../../logo.jpg"
+                    width="50" height="50" alt="">
+                <img style="cursor: pointer;" onclick="window.location.href='../../index.html'" src="../../logo.jpg"
+                    width="40" height="40" alt="">
             </span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -91,15 +93,13 @@
                 <div class="carousel-item">
                     <img src="../gallery/crousal3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <span>Some representative placeholder content</span><br>
-                        <span>This slide can be customized with additional information.</span>
+                        <span>Live performance at Sangeet Natak Academy in Jyotigarmay, New Delhi</span><br>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="../gallery/crousal4.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <span>Some representative placeholder content</span><br>
-                        <span>This slide can be customized with additional information.</span>
+                        <span>Special shot during the visit at PM Museum, New Delhi</span><br>
                     </div>
                 </div>
             </div>
@@ -117,13 +117,13 @@
     </div>
     <hr>
     <!-- gallery now starts -->
-    <div class="main_card row row-cols-1 row-cols-md-3 g-4">
+    <div class="main_card row row-cols-1 row-cols-md-2 g-4">
         <div class="col container_gallery">
             <div class="card h-100 card_gallery">
                 <img src="../gallery/maincard1.jpg" class="img-fluid rounded-start" alt="...">
                 <div class="card-body card__content_gallery">
-                    <h4 class="card-title">Received Special Guidance from Dr. Tanu Jain Madam, Ex. Civil Servant and
-                        Star Faculty of Tathastu IAS, O.R.N., Delhi.</h4>
+                    <h4 class="card-title">Received Special Guidance from Dr. Tanu Jain, Former Civil Servant and
+                        Star Faculty at Tathastu IAS, O.R.N., Delhi.</h4>
                 </div>
             </div>
         </div>
@@ -131,12 +131,13 @@
             <div class="card h-100 card_gallery">
                 <img src="../gallery/maincard2.jpg" class="img-fluid rounded-start" alt="...">
                 <div class="card-body card__content_gallery">
-                    <h4 class="card-title">Addressing the yound and enthusiastic aspirants of UPSC CSE for the
-                        art of the effective strategy buildings.</h4>
+                    <h4 class="card-title">Addressing the young and enthusiastic aspirants of UPSC CSE on the
+                        art of effective strategy building.</h4>
                 </div>
             </div>
         </div>
     </div>
+    
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <!-- Card 1 -->
@@ -270,7 +271,7 @@
             <div class="card h-100 card_gallery">
                 <img src="../gallery/card16.jpg" class="card-img-top" alt="Card 12">
                 <div class="card-body card__content_gallery">
-                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                    <h5 class="card-title">Special Session with IPS Gaurav Tripathi</h5>
                 </div>
             </div>
         </div>
@@ -280,7 +281,7 @@
             <div class="card h-100 card_gallery">
                 <img src="../gallery/card17.jpg" class="card-img-top" alt="Card 12">
                 <div class="card-body card__content_gallery">
-                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                    <h5 class="card-title">Special Session with IAS Aditya Pandey</h5>
                 </div>
             </div>
         </div>
@@ -291,7 +292,7 @@
             <div class="card h-100 card_gallery">
                 <img src="../gallery/self_card1.jpg" class="card-img-top" alt="Card 12">
                 <div class="card-body card__content_gallery">
-                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                    <h5 class="card-title">Official Visit at PM Museum New Delhi</h5>
                 </div>
             </div>
         </div>
@@ -299,7 +300,7 @@
             <div class="card h-100 card_gallery">
                 <img src="../gallery/self_card2.jpg" class="card-img-top" alt="Card 12">
                 <div class="card-body card__content_gallery">
-                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                    <h5 class="card-title">Winning Moments at IIT Roorkee</h5>
                 </div>
             </div>
         </div>
@@ -307,7 +308,7 @@
             <div class="card h-100 card_gallery">
                 <img src="../gallery/self_card3.jpg" class="card-img-top" alt="Card 12">
                 <div class="card-body card__content_gallery">
-                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                    <h5 class="card-title">Special Shot at IIT Roorkee</h5>
                 </div>
             </div>
         </div>
@@ -315,7 +316,7 @@
             <div class="card h-100 card_gallery">
                 <img src="../gallery/self_card4.jpg" class="card-img-top" alt="Card 12">
                 <div class="card-body card__content_gallery">
-                    <h5 class="card-title">Getting Rewarded by Great Tabla Player Anuradha Pal</h5>
+                    <h5 class="card-title">Rewarded for Overall Activity Holder</h5>
                 </div>
             </div>
         </div>
