--- a/frontend/html/achievment.html
+++ b/frontend/html/achievment.html
@@ -8,12 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="logo.png">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/background.css">
+    <link rel="stylesheet" href="../css/achievment.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/responsive.css">
 </head>
-<body class="body_contact">
+
+<body class="body_achievment">
     <div class="background_anim"></div>
     <div class="background_anim"></div>
     <div class="background_anim"></div>
@@ -58,6 +60,290 @@
             </div>
         </div>
     </nav>
+
+    <div class="crousal">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img onclick="window.location.href='../achievement_images/cert9.jpg'" src="../achievement_images/medals.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img onclick="window.location.href='../achievement_images/cert9.jpg'" src="../achievement_images/medl.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    <div class="wrapup">
+        <div class="row">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Top featured</h5>
+                        <li>Guinness Book of World Records Certificate Holder</li>
+                        <li>Google Certificate Holder</li>
+                        <li>Recipient of 4 International Awards</li>
+                        <li>Winner of 7 National Awards</li>
+                        <li>Victorious in Delhi University College Fest</li>
+                        <li>Champion in IIT Delhi Competition</li>
+                        <li>Triumphant in IIT Roorkee Competition</li>
+                        <li>State Topper of Indian Talent Olympiad</li>
+                        <li>First Attempt Qualifier in Central University Entrance Test (CUET)</li>
+                        <li>Top Performer in Board Examination at the Town Level</li>
+                    </div>
+                </div><br>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Notable Engagements</h5>
+                        <li>Performed in front of Indian Prime Minister Narendra Modi</li>
+                        <li>Performed in front of Home Minister Amit Shah</li>
+                        <li>Participated in Aaj Tak debate show with Anjana Om Kasyap</li>
+                    </div>
+                </div><br>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Media Coverage</h5>
+                        <li>Interviewed by PTI (Press Trust of India), India's largest news agency</li>
+                        <li>Featured on ETV Bharat</li>
+                        <li>Interviewed by Hindustan 9 News and more...</li>
+                    </div>
+                </div>
+
+            </div>
+
+
+            <div class="col-sm-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Featured Performances</h5>
+                        <li>Sangeet Natak Academy, New Delhi</li>
+                        <li>Subah-e-Banaras, Varanasi</li>
+                        <li>IIT Roorkee and IIT Delhi</li>
+                        <li>Ustad Allauddin Khan International Concert of Music</li>
+                        <li>Art Ichol World Heritage Site (M.P.)</li>
+                        <li>Delhi Technological University</li>
+                        <li>Ustad Ali Akbar Khan International Concert of Music</li>
+                        <li>Gourav Diwas, Satna (Shared stage with Manoj Muntashir Shukla)</li>
+                        <li>Central Academy Vijaynagar, Jabalpur</li>
+                        <li>Apna Ghar, Katni</li>
+                        <li>APS University, Rewa</li>
+                        <li>Kishore Kumar International Auditorium Khandwa, Madhya Pradesh</li>
+                        <li>Brij Vilas Palace Maihar (In front of Usha Thakur ji, Cultural Minister of Madhya Pradesh)
+                        </li>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <section class="achievment_content">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+
+            <!-- Card 1 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert1.jpg'" src="../achievement_images/cert1.jpg" class="card-img-top" alt="Cert 1">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 2 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert2.jpg'" src="../achievement_images/cert2.jpg" class="card-img-top" alt="Cert 2">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 3 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert3.jpg'" src="../achievement_images/cert3.jpg" class="card-img-top" alt="Cert 3">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 4 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert4.jpg'" src="../achievement_images/cert4.jpg" class="card-img-top" alt="Cert 4">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 5 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert5.jpg'" src="../achievement_images/cert5.jpg" class="card-img-top" alt="Cert 5">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 6 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert6.jpg'" src="../achievement_images/cert6.jpg" class="card-img-top" alt="Cert 6">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 7 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert7.jpg'" src="../achievement_images/cert7.jpg" class="card-img-top" alt="Cert 7">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 8 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert8.jpg'" src="../achievement_images/cert8.jpg" class="card-img-top" alt="Cert 8">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 9 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert9.jpg'" src="../achievement_images/cert9.jpg" class="card-img-top" alt="Cert 9">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 10 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert10.jpg'" src="../achievement_images/cert10.jpg" class="card-img-top" alt="Cert 10">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 11 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert11.jpg'" src="../achievement_images/cert11.jpg" class="card-img-top" alt="Cert 11">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 12 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert12.jpg'" src="../achievement_images/cert12.jpg" class="card-img-top" alt="Cert 12">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 13 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert13.jpg'" src="../achievement_images/cert13.jpg" class="card-img-top" alt="Cert 13">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 14 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert14.jpg'" src="../achievement_images/cert14.jpg" class="card-img-top" alt="Cert 14">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 15 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert15.jpg'" src="../achievement_images/cert15.jpg" class="card-img-top" alt="Cert 15">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 16 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert16.jpg'" src="../achievement_images/cert16.jpg" class="card-img-top" alt="Cert 16">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 17 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert17.jpg'" src="../achievement_images/cert17.jpg" class="card-img-top" alt="Cert 17">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+
+            <!-- Card 18 -->
+            <div class="col container_gallery">
+                <div class="card h-100 card_gallery">
+                    <img onclick="window.location.href='../achievement_images/cert18.jpg'" src="../achievement_images/cert18.jpg" class="card-img-top" alt="Cert 18">
+                    <div class="card-body card__content_gallery">
+                        <!-- Add content if needed -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+        <!-- footer -->
+        <footer>
+            <p>&copy; Copyright 2023 | All Rights Reserved.</p>
+        </footer>
+    
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -65,6 +351,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
     crossorigin="anonymous"></script>
-<script src="frontend/js/index.js"></script>
+    <script src="../js/index.js"></script>
 
 </html>
