--- a/frontend/html/intro.html
+++ b/frontend/html/intro.html
@@ -37,22 +37,22 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" aria-current="page" href="intro.html">Home</a>
+                            <a class="nav-link"  onclick="setActive(0)" aria-current="page" href="intro.html">Home</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" href="achievment.html">Achievement</a>
+                            <a class="nav-link"  onclick="setActive(1)" href="achievment.html">Achievement</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" href="gallery.html" aria-disabled="true">Gallery</a>
+                            <a class="nav-link"  onclick="setActive(2)" href="gallery.html" aria-disabled="true">Gallery</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link" href="contact.html" aria-disabled="true">Contact</a>
+                            <a class="nav-link"  onclick="setActive(3)" href="contact.html" aria-disabled="true">Contact</a>
                         </span>
                     </li>
                 </ul>
@@ -111,7 +111,7 @@
                         <li>Featured on ETV Bharat</li>
                         <li>Interviewed by Hindustan 9 News and more...</li>
                     </ul>
-                    <button onclick="window.location.href='achievement.html'">
+                    <button onclick="window.location.href='achievment.html'">
                         Explore More...
                     </button>
                 </ul>
@@ -130,9 +130,6 @@
                         <span>Gwalior</span>
                     </li>
 
-                    <button onclick="window.location.href='frontend/html/intro.html'">
-                        Explore More...
-                    </button>
                 </ul>
             </details>
 
@@ -146,9 +143,6 @@
                     <li>Debater</li>
                     <li>Knowledge Enthusiast</li>
                     <li>Keen Learner</li>
-                    <button onclick="window.location.href='frontend/html/intro.html'">
-                        Explore More...
-                    </button>
                 </ul>
             </details>
 
@@ -159,9 +153,6 @@
                         I am currently preparing for <strong>[Mention the specific exam or pursuit]</strong> to further
                         enhance my skills and contribute to my areas of expertise.
                     </li>
-                    <button onclick="window.location.href='frontend/html/intro.html'">
-                        Explore More...
-                    </button>
                 </ul>
             </details>
         </div>
@@ -173,6 +164,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
     crossorigin="anonymous"></script>
-<script src="frontend/js/index.js"></script>
+<script src="../js/index.js"></script>
 
 </html>
