--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <span><button>Winner</button></span>
                 <span><button>in</button></span>
                 <span><button><span>IIT</span></button></span>
-                <span><button><span>Delhi</span></button></span>
+                <span><button><span>Roorkee</span></button></span>
                 <span><button>Competition</button></span><br>
                 <span><button><span>4</span></button></span>
                 <span><button>International</button></span>
