--- a/frontend/html/gallery.html
+++ b/frontend/html/gallery.html
@@ -25,9 +25,9 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <span>
-                <img style="cursor: pointer;" onclick="window.location.href='../../index.html'" src="../../logo.jpg"
+                <img style="cursor: pointer;" onclick="window.location.href='../../index.html'" src="../../logo.png"
                     width="50" height="50" alt="">
-                <img style="cursor: pointer;" onclick="window.location.href='../../index.html'" src="../../logo.jpg"
+                <img style="cursor: pointer;" onclick="window.location.href='../../index.html'" src="../../logo.png"
                     width="40" height="40" alt="">
             </span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
