all pages added...added new logo...

--- a/frontend/html/intro.html
+++ b/frontend/html/intro.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas_timepass</title>
+    <title>Rohit-kumar-saket</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="../../icon.png">
     <link rel="stylesheet" href="../css/intro.css">
     <link rel="stylesheet" href="../css/background.css">
     <link rel="stylesheet" href="../css/navbar.css">
@@ -37,22 +37,24 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link"  onclick="setActive(0)" aria-current="page" href="intro.html">Home</a>
+                            <a class="nav-link" onclick="setActive(0)" aria-current="page" href="intro.html">Home</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link"  onclick="setActive(1)" href="achievment.html">Achievement</a>
+                            <a class="nav-link" onclick="setActive(1)" href="achievment.html">Achievement</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link"  onclick="setActive(2)" href="gallery.html" aria-disabled="true">Gallery</a>
+                            <a class="nav-link" onclick="setActive(2)" href="gallery.html"
+                                aria-disabled="true">Gallery</a>
                         </span>
                     </li>
                     <li class="nav-item">
                         <span>
-                            <a class="nav-link"  onclick="setActive(3)" href="contact.html" aria-disabled="true">Contact</a>
+                            <a class="nav-link" onclick="setActive(3)" href="contact.html"
+                                aria-disabled="true">Contact</a>
                         </span>
                     </li>
                 </ul>
@@ -97,7 +99,8 @@
                         <li>Apna Ghar, Katni</li>
                         <li>APS University, Rewa</li>
                         <li>Kishore Kumar International Auditorium Khandwa, Madhya Pradesh</li>
-                        <li>Brij Vilas Palace Maihar (In front of Usha Thakur ji, Cultural Minister of Madhya Pradesh)</li>
+                        <li>Brij Vilas Palace Maihar (In front of Usha Thakur ji, Cultural Minister of Madhya Pradesh)
+                        </li>
                     </ul>
                     <li>Notable Engagements:</li>
                     <ul>
