--- a/frontend/html/achievment.html
+++ b/frontend/html/achievment.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas_timepass</title>
+    <title>Rohit-kumar-saket</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="../../icon.png">
     <link rel="stylesheet" href="../css/background.css">
     <link rel="stylesheet" href="../css/achievment.css">
     <link rel="stylesheet" href="../css/navbar.css">
@@ -71,10 +71,10 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img onclick="window.location.href='../achievement_images/cert9.jpg'" src="../achievement_images/medals.jpg" class="d-block w-100" alt="...">
+                    <img src="../achievement_images/medals.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img onclick="window.location.href='../achievement_images/cert9.jpg'" src="../achievement_images/medl.jpg" class="d-block w-100" alt="...">
+                    <img src="../achievement_images/medl.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
@@ -160,7 +160,8 @@
             <!-- Card 1 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert1.jpg'" src="../achievement_images/cert1.jpg" class="card-img-top" alt="Cert 1">
+                    <img onclick="window.location.href='../achievement_images/cert1.jpg'"
+                        src="../achievement_images/cert1.jpg" class="card-img-top" alt="Cert 1">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -170,7 +171,8 @@
             <!-- Card 2 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert2.jpg'" src="../achievement_images/cert2.jpg" class="card-img-top" alt="Cert 2">
+                    <img onclick="window.location.href='../achievement_images/cert2.jpg'"
+                        src="../achievement_images/cert2.jpg" class="card-img-top" alt="Cert 2">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -180,7 +182,8 @@
             <!-- Card 3 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert3.jpg'" src="../achievement_images/cert3.jpg" class="card-img-top" alt="Cert 3">
+                    <img onclick="window.location.href='../achievement_images/cert3.jpg'"
+                        src="../achievement_images/cert3.jpg" class="card-img-top" alt="Cert 3">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -190,7 +193,8 @@
             <!-- Card 4 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert4.jpg'" src="../achievement_images/cert4.jpg" class="card-img-top" alt="Cert 4">
+                    <img onclick="window.location.href='../achievement_images/cert4.jpg'"
+                        src="../achievement_images/cert4.jpg" class="card-img-top" alt="Cert 4">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -200,7 +204,8 @@
             <!-- Card 5 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert5.jpg'" src="../achievement_images/cert5.jpg" class="card-img-top" alt="Cert 5">
+                    <img onclick="window.location.href='../achievement_images/cert5.jpg'"
+                        src="../achievement_images/cert5.jpg" class="card-img-top" alt="Cert 5">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -210,7 +215,8 @@
             <!-- Card 6 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert6.jpg'" src="../achievement_images/cert6.jpg" class="card-img-top" alt="Cert 6">
+                    <img onclick="window.location.href='../achievement_images/cert6.jpg'"
+                        src="../achievement_images/cert6.jpg" class="card-img-top" alt="Cert 6">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -220,7 +226,8 @@
             <!-- Card 7 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert7.jpg'" src="../achievement_images/cert7.jpg" class="card-img-top" alt="Cert 7">
+                    <img onclick="window.location.href='../achievement_images/cert7.jpg'"
+                        src="../achievement_images/cert7.jpg" class="card-img-top" alt="Cert 7">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -230,7 +237,8 @@
             <!-- Card 8 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert8.jpg'" src="../achievement_images/cert8.jpg" class="card-img-top" alt="Cert 8">
+                    <img onclick="window.location.href='../achievement_images/cert8.jpg'"
+                        src="../achievement_images/cert8.jpg" class="card-img-top" alt="Cert 8">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -240,7 +248,8 @@
             <!-- Card 9 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert9.jpg'" src="../achievement_images/cert9.jpg" class="card-img-top" alt="Cert 9">
+                    <img onclick="window.location.href='../achievement_images/cert9.jpg'"
+                        src="../achievement_images/cert9.jpg" class="card-img-top" alt="Cert 9">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -250,7 +259,8 @@
             <!-- Card 10 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert10.jpg'" src="../achievement_images/cert10.jpg" class="card-img-top" alt="Cert 10">
+                    <img onclick="window.location.href='../achievement_images/cert10.jpg'"
+                        src="../achievement_images/cert10.jpg" class="card-img-top" alt="Cert 10">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -260,7 +270,8 @@
             <!-- Card 11 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert11.jpg'" src="../achievement_images/cert11.jpg" class="card-img-top" alt="Cert 11">
+                    <img onclick="window.location.href='../achievement_images/cert11.jpg'"
+                        src="../achievement_images/cert11.jpg" class="card-img-top" alt="Cert 11">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -270,7 +281,8 @@
             <!-- Card 12 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert12.jpg'" src="../achievement_images/cert12.jpg" class="card-img-top" alt="Cert 12">
+                    <img onclick="window.location.href='../achievement_images/cert12.jpg'"
+                        src="../achievement_images/cert12.jpg" class="card-img-top" alt="Cert 12">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -280,7 +292,8 @@
             <!-- Card 13 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert13.jpg'" src="../achievement_images/cert13.jpg" class="card-img-top" alt="Cert 13">
+                    <img onclick="window.location.href='../achievement_images/cert13.jpg'"
+                        src="../achievement_images/cert13.jpg" class="card-img-top" alt="Cert 13">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -290,7 +303,8 @@
             <!-- Card 14 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert14.jpg'" src="../achievement_images/cert14.jpg" class="card-img-top" alt="Cert 14">
+                    <img onclick="window.location.href='../achievement_images/cert14.jpg'"
+                        src="../achievement_images/cert14.jpg" class="card-img-top" alt="Cert 14">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -300,7 +314,8 @@
             <!-- Card 15 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert15.jpg'" src="../achievement_images/cert15.jpg" class="card-img-top" alt="Cert 15">
+                    <img onclick="window.location.href='../achievement_images/cert15.jpg'"
+                        src="../achievement_images/cert15.jpg" class="card-img-top" alt="Cert 15">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -310,7 +325,8 @@
             <!-- Card 16 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert16.jpg'" src="../achievement_images/cert16.jpg" class="card-img-top" alt="Cert 16">
+                    <img onclick="window.location.href='../achievement_images/cert16.jpg'"
+                        src="../achievement_images/cert16.jpg" class="card-img-top" alt="Cert 16">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -320,7 +336,8 @@
             <!-- Card 17 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert17.jpg'" src="../achievement_images/cert17.jpg" class="card-img-top" alt="Cert 17">
+                    <img onclick="window.location.href='../achievement_images/cert17.jpg'"
+                        src="../achievement_images/cert17.jpg" class="card-img-top" alt="Cert 17">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -330,7 +347,8 @@
             <!-- Card 18 -->
             <div class="col container_gallery">
                 <div class="card h-100 card_gallery">
-                    <img onclick="window.location.href='../achievement_images/cert18.jpg'" src="../achievement_images/cert18.jpg" class="card-img-top" alt="Cert 18">
+                    <img onclick="window.location.href='../achievement_images/cert18.jpg'"
+                        src="../achievement_images/cert18.jpg" class="card-img-top" alt="Cert 18">
                     <div class="card-body card__content_gallery">
                         <!-- Add content if needed -->
                     </div>
@@ -339,11 +357,11 @@
         </div>
     </section>
 
-        <!-- footer -->
-        <footer>
-            <p>&copy; Copyright 2023 | All Rights Reserved.</p>
-        </footer>
-    
+    <!-- footer -->
+    <footer>
+        <p>&copy; Copyright 2023 | All Rights Reserved.</p>
+    </footer>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -351,6 +369,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
     integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
     crossorigin="anonymous"></script>
-    <script src="../js/index.js"></script>
+<script src="../js/index.js"></script>
 
 </html>
