--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas_timepass</title>
-    <link rel="icon" href="logo.png">
+    <title>Rohit-kumar-saket</title>
+    <link rel="icon" href="../../icon.png">
     <link rel="stylesheet" href="frontend/css/background.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="frontend/css/responsive.css">
@@ -57,7 +57,7 @@
                 <span><button><span>7</span></button></span>
                 <span><button>National</button></span>
                 <span><button>Awards</button></span>
-              </h1>
+            </h1>
         </div>
     </section>
 </body>
