added whatsapp info and ui of index

--- a/templete/core/index.html
+++ b/templete/core/index.html
@@ -3,6 +3,122 @@
 
 {% block content %}
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 outlet">
+
+            <div class="outlet-text">
+                <br>
+                <h1>Your Data <br>Our Analysis!</h1>
+                <h3>100% Automatically and Free</h3>
+            </div>
+
+        </div>
+
+        <div class="col-md-6 upload-outlet">
+            <div class="input-div">
+                <input class="input" name="file" type="file">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" stroke-linejoin="round"
+                    stroke-linecap="round" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor"
+                    class="icon">
+                    <polyline points="16 16 12 12 8 16"></polyline>
+                    <line y2="21" x2="12" y1="12" x1="12"></line>
+                    <path d="M20.39 18.39A5 5 0 0 0 18 9h-1.26A8 8 0 1 0 3 16.3"></path>
+                    <polyline points="16 16 12 12 8 16"></polyline>
+                </svg>
+            </div>
+            <div class="upload-alert">
+                <div>
+                    <i class="fa-brands fa-whatsapp"> --</i>
+                    <i class="fa-brands fa-instagram"> --</i>
+                    <i class="fa-solid fa-phone"></i>
+                </div>
+                <span>CSV, JSON, TXT</span>
+            </div>
+        </div>
+
+    </div>
+    <br><br>
+    <div class="row">
+        <div class="col-md-12 information-outlet">
+            <div class="row">
+                <span class="col-md-3 mx-1 info-btn active-btn" data-info="whatsapp-info"><i class="fab fa-whatsapp"></i> Whatsapp</span>
+                <span class="col-md-3 mx-1 info-btn" data-info="instagram-info"><i class="fab fa-instagram"></i> Instagram</span>
+                <span class="col-md-3 mx-1 info-btn" data-info="phone-info"><i class="fas fa-phone"></i> Phone-Calls</span>
+
+                <div class="col-md-12 mx-1 info-data whatsapp-info active">
+                    <div class="row" style="justify-content: center;align-items: center;">
+                        <div class="col-md-6" style="display: flex; justify-content: center;align-items: center;">
+                            <img src="../../static/assets/images/whatsapp.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 1: Open WhatsApp on your device.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 2: Tap on the three-dot menu icon.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 3: Select "Settings" from the menu options.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 4: Navigate to the "Chats" section within Settings.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 5: Choose "Chat history" from the list of options.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 6: Tap on "Export chat" to proceed.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 7: Select the chat or conversation to export.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 8: Choose whether to include media files.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 9: Select a destination for exporting the chat data.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 10: Follow the prompts to complete the export process.</li>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-md-12 mx-1 info-data instagram-info">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate ipsa hic quae, deleniti minus et natus cum rem iste. Doloribus tempore voluptate soluta enim earum architecto neque qui voluptates nemo!
+                </div>
+                <div class="col-md-12 mx-1 info-data phone-info">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate ipsa hic quae, deleniti minus et natus cum rem iste. Doloribus tempore voluptate soluta enim earum architecto neque qui voluptates nemo!
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 {% endblock content %}
