updated full index

--- a/templete/core/index.html
+++ b/templete/core/index.html
@@ -42,10 +42,12 @@
     <div class="row">
         <div class="col-md-12 information-outlet">
             <div class="row">
-                <span class="col-md-3 mx-1 info-btn active-btn" data-info="whatsapp-info"><i class="fab fa-whatsapp"></i> Whatsapp</span>
-                <span class="col-md-3 mx-1 info-btn" data-info="instagram-info"><i class="fab fa-instagram"></i> Instagram</span>
-                <span class="col-md-3 mx-1 info-btn" data-info="phone-info"><i class="fas fa-phone"></i> Phone-Calls</span>
-
+                <div class="col-md-12 info-btns">
+                    <span class="info-btn active-btn" data-info="whatsapp-info"><i class="fab fa-whatsapp"></i> Whatsapp</span>
+                    <span class="info-btn" data-info="instagram-info"><i class="fab fa-instagram"></i> Instagram</span>
+                    <span class="info-btn" data-info="phone-info"><i class="fas fa-phone"></i> Phone-Calls</span>
+                </div>
+                <hr style="margin-top: 1em;">
                 <div class="col-md-12 mx-1 info-data whatsapp-info active">
                     <div class="row" style="justify-content: center;align-items: center;">
                         <div class="col-md-6" style="display: flex; justify-content: center;align-items: center;">
@@ -109,10 +111,87 @@
                 </div>
                 
                 <div class="col-md-12 mx-1 info-data instagram-info">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate ipsa hic quae, deleniti minus et natus cum rem iste. Doloribus tempore voluptate soluta enim earum architecto neque qui voluptates nemo!
+                    <div class="row" style="justify-content: center;align-items: center;">
+                        <div class="col-md-6" style="display: flex; justify-content: center;align-items: center;">
+                            <img src="../../static/assets/images/insta.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 1: Open the Instagram app on your device.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 2: Navigate to your profile by tapping on your profile picture or the person icon.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 3: Tap on the menu icon (three horizontal lines) in the top right corner.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 4: Select "Settings" from the menu.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 5: Scroll down and tap on "Your Activity".</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 6: Tap on "Download Your Information".</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 7: Wait for Instagram to prepare your data. You'll receive an email with a link to download your data.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 8: Check your Instagram after some time and click on the download from Instagram.</li>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                
                 <div class="col-md-12 mx-1 info-data phone-info">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate ipsa hic quae, deleniti minus et natus cum rem iste. Doloribus tempore voluptate soluta enim earum architecto neque qui voluptates nemo!
+                    <div class="row" style="justify-content: center;align-items: center;">
+                        <div class="col-md-6" style="display: flex; justify-content: center;align-items: center;">
+                            <img src="../../static/assets/images/phone.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 1: Open the Myjio app on your device.</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 2: Navigate to your MyJio section and then tap on Mobile icon</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 3: Under Mobile section go to the Reacharge & Payments</li>
+                                    </div>
+                                </div>
+                                <div class="col-md-12">
+                                    <div class="step">
+                                        <li>Step 4: Open My-statement and Download the Data</li>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
