added wordcloud and heatmap

--- a/templete/core/analysis.html
+++ b/templete/core/analysis.html
@@ -43,6 +43,12 @@
                 <div class="col-md-6 d-flex justify-content-center align-items-center">
                     <a href="../../static/assets/temp/usertime.png"><img src="../../static/assets/temp/usertime.png" alt="" style="object-fit: contain; max-width: 100%;"></a>
                 </div>
+                <div class="col-md-6 d-flex justify-content-center align-items-center">
+                    <a href="../../static/assets/temp/heatmap.png"><img src="../../static/assets/temp/heatmap.png" alt="" style="object-fit: contain; max-width: 100%;"></a>
+                </div>
+                <div class="col-md-6 d-flex justify-content-center align-items-center">
+                    <a href="../../static/assets/temp/word.png"><img src="../../static/assets/temp/word.png" alt="" style="object-fit: contain; max-width: 100%;"></a>
+                </div>
             </div>
         </div>
     </div>
