adjusted ui...added comments on functions improve redeability and code

--- a/templete/core/index.html
+++ b/templete/core/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="upload-alert">
                     <div>
-                        <input style="margin-right: .1em;" type="radio" name="contact_method" id="whatsapp" value="whatsapp">
+                        <input style="margin-right: .1em;" type="radio" name="contact_method" id="whatsapp" value="whatsapp" checked>
                         <label style="cursor: pointer;" for="whatsapp"><i class="fab fa-whatsapp"></i></label>
                                     
                         <input style="margin-right: .1em;" type="radio" name="contact_method" id="instagram" value="instagram">
